--- a/src/main/resources/templates/html/dashboard/myPage-admin.html
+++ b/src/main/resources/templates/html/dashboard/myPage-admin.html
@@ -230,8 +230,8 @@
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
 
-<script type="text/javascript" th:inline="javascript" src="/js/mypage-admin.js"></script>
-
+<!--<script type="text/javascript" th:inline="javascript" src="/js/mypage-admin.js"></script>-->
+<script type="module" src="/js/mypage-admin.js"></script>
 </body>
 
 </html>
