--- a/src/main/resources/templates/html/main.html
+++ b/src/main/resources/templates/html/main.html
@@ -187,6 +187,7 @@
 </footer>
 
 <script type="module" src="/js/main.js"></script>
+<script type="module" src="/js/move.js"></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
