jwt 이용해서 페이지 이동 성공 - 추가 수정 필요

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -67,7 +67,6 @@
                         <div class="card-body p-2">
                             <div class="profile-thumbnail small-thumbnail mx-auto"></div>
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutee-name" >
-                                이연우
                             </h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
                                 <a href="./{user_id}" id="information"
@@ -288,7 +287,8 @@
 
 <!-- Validation -->
 <script src="/js/validate-tutee.js"></script>
-<script src="/js/myPage-tutee.js"></script>
+<script type="module" src="/js/myPage-tutee.js" nomodule></script>
+
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
@@ -335,7 +335,6 @@
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
 
-<!-- Ajax get data -->
 
 </body>
 
