mypage-tutor : profileImg 업로드(2차)

--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -66,8 +66,8 @@
                     <div class="card border-light p-2">
                         <div class="card-body p-2">
                             <div class="profile-thumbnail small-thumbnail mx-auto">
-                                <input type="file" id="file" name="file" onchange="uploadFile(this)"
-                                       style="display: none" accept=".jpg, .png, .jpeg"/>
+                                <input type="file" id="file" name="file"
+                                       style="display: none" accept=".jpg"/>
                                 <button type="button" id="profileImgButton" class="btn btn-sm p-0"
                                         data-toggle="tooltip" data-placement="top" title="Edit Profile">
                                     <img src="/assets/img/team/profile-picture-4.jpg"
