--- a/src/main/resources/templates/html/main-search.html
+++ b/src/main/resources/templates/html/main-search.html
@@ -68,7 +68,7 @@
                 style="padding-top: 25px; padding-bottom: 25px;">
                 <div class="container position-relative">
 
-                    <a class="navbar-brand mr-lg-3" href="#">
+                    <a class="navbar-brand mr-lg-3" href="/main">
                         <img class="navbar-brand-dark" style="min-height: 60px;" src="/assets/img/Logo_white.png"
                             alt="menuimage">
 
@@ -203,8 +203,8 @@
         </div>
     </footer>
 
-    <script src="/js/main.js"></script>
-    <script src="/js/move.js"></script>
+    <script type="module" src="/js/main-search.js"></script>
+    <script type="module" src="/js/move.js"></script>
 
     <!-- Core -->
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
