4월 30일, JWT 1. 네비바 id 수정 2. js에 type="module" 속성 추가

--- a/src/main/resources/templates/html/Tutor-Detail-View.html
+++ b/src/main/resources/templates/html/Tutor-Detail-View.html
@@ -44,14 +44,12 @@
                          alt="menuimage"/>
                 </a>
                 <div>
-                    <button class="btn mb-2 mr-2 btn-white" type="button" id="my-page">
+                    <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">
                         MY PAGE
                     </button>
-                    <a href="sign-in.html">
-                        <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-in">
-                            SIGN IN
-                        </button>
-                    </a>
+                    <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">
+                        SIGN IN
+                    </button>
                 </div>
             </div>
         </nav>
@@ -576,7 +574,9 @@
     </div>
 </footer>
 
-<script src="/js/tutor-detail-view-calendar.js" charset="UTF-8"></script>
+<script type="module" src="/js/tutor-detail-view-calendar.js" charset="UTF-8"></script>
+<script type="module" src="/js/move.js" charset="UTF-8"></script>
+
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
