--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -69,16 +69,16 @@
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutee-name" >
                             </h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                <a href="./{user_id}" id="information"
+                                <a href="#" id="information"
                                    class="d-flex list-group-item list-group-item-action active">회원 정보<span
                                         class="icon icon-xs ml-auto"><span class="fas fa-chevron-right"></span></span>
                                 </a>
-                                <a href="./{user_id}/schedule" id="schedule"
+                                <a href="#" id="schedule"
                                    class="d-flex list-group-item list-group-item-action">수업
                                     일정<span class="icon icon-xs ml-auto"><span
                                             class="fas fa-chevron-right"></span></span>
                                 </a>
-                                <a href="/{user_id}/history" id="history"
+                                <a href="#" id="history"
                                    class="d-flex list-group-item list-group-item-action">히스토리 정보<span
                                         class="icon icon-xs ml-auto"><span class="fas fa-chevron-right"></span></span>
                                 </a>
@@ -288,6 +288,7 @@
 <!-- Validation -->
 <script src="/js/validate-tutee.js"></script>
 <script type="module" src="/js/myPage-tutee.js" nomodule></script>
+<script type="module" src="/js/myPageMove.js" nomodule></script>
 
 
 <!-- Core -->
