4/30 마이페이지 튜터 경로 이동시 jwt 설정, 추가 버그 수정

--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -77,11 +77,11 @@
                             </div>
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutor-name">Neil Sims</h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                <a href="./{user_id}" id="information"
+                                <a href="#" id="information"
                                    class="d-flex list-group-item list-group-item-action  active">Information<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
-                                <a href="./{user_id}/schedule" id="schedule"
+                                <a href="#" id="schedule"
                                    class="d-flex list-group-item list-group-item-action ">Schedule<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
@@ -324,7 +324,8 @@
 </footer>
 
 <script src="/js/validate-tutor.js"></script>
-<script src="/js/mypage-tutor.js"></script>
+<script type="module" src="/js/mypage-tutor.js" nomodule></script>
+<script type="module" src="/js/myPageMove.js" nomodule></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
