페이지 이동 버그 수정 필요

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
@@ -168,6 +168,7 @@
 
 <!-- ajax -->
 <script type="module" src="/js/myPage-tutees_CourseHistory.js" nomodule></script>
+<script type="module" src="/js/move.js" nomodule></script>
 <script type="module" src="/js/myPageMove.js" nomodule></script>
 
 <!-- Core -->
