--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -289,6 +289,7 @@
 <script src="/js/validate-tutee.js"></script>
 <script type="module" src="/js/myPage-tutee.js" nomodule></script>
 <script type="module" src="/js/myPageMove.js" nomodule></script>
+<script type="module" src="/js/move.js" nomodule></script>
 
 
 <!-- Core -->
