--- a/src/main/resources/templates/html/evaluate-popup.html
+++ b/src/main/resources/templates/html/evaluate-popup.html
@@ -72,9 +72,9 @@
         <div>
             <div>
                 <div>
-                    <h3 class="modal-title mt-5 mb-5" style="text-align: center;">수업을 평가해주세요!</h3>
+                    <h3 class="modal-title mt-5 mb-3" style="text-align: center;" id="evaluate-h3">수업을 평가해주세요!</h3>
                 </div>
-                <div class="modal-body mb-5" style="text-align: center;">
+                <div class="modal-body mb-5" style="text-align: center;" id="evaluate-div">
                         <span>
                             <span class="mr-2">
                                 <button style="height: 100px; width: 100px;" id="like-btn"
