mypage-tutor : memo, gender 해결

--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -162,7 +162,7 @@
                                             <label>Gender</label>
                                             <div class="form-check">
                                                 <input class="form-check-input" type="radio" name="genderRadios"
-                                                       id="gender-female" value="female" checked>
+                                                       id="gender-female" value="female">
                                                 <label class="form-check-label" for="gender-female">
                                                     Female
                                                 </label>
@@ -176,6 +176,14 @@
                                                 <label class="form-check-label" for="gender-other">
                                                     Other
                                                 </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12 mb-3" >
+                                            <div class="form-group">
+                                                <label> Info</label></br>
+                                                <textarea name="memo" id="memo" cols="80" rows="10" placeholder="내용" style="resize: none">안녕</textarea>
                                             </div>
                                         </div>
                                     </div>
