5월 1일 JWT 1. 마이페이지에서 마이페이지 버튼 숨기기

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
@@ -50,7 +50,7 @@
                      alt="menuimage">
             </a>
             <div>
-                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
+                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button>
                 <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button>
             </div>
         </div>
@@ -167,8 +167,8 @@
 </footer>
 
 <!-- ajax -->
-<script type="module" src="/js/myPage-tutees_CourseHistory.js" nomodule></script>
-<script type="module" src="/js/move.js" nomodule></script>
+<script type="module" src="/js/myPage-tutees_CourseHistory.js" ></script>
+<script type="module" src="/js/move.js" ></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
