--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -51,7 +51,7 @@
                      alt="menuimage">
             </a>
             <div>
-                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button></a>
+                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button></a>
                 <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button></a>
             </div>
         </div>
@@ -287,8 +287,8 @@
 
 <!-- Validation -->
 <script src="/js/validate-tutee.js"></script>
-<script type="module" src="/js/myPage-tutee.js" nomodule></script>
-<script type="module" src="/js/move.js" nomodule></script>
+<script type="module" src="/js/myPage-tutee.js" ></script>
+<script type="module" src="/js/move.js" ></script>
 
 
 <!-- Core -->
