--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -51,7 +51,7 @@
                      alt="menuimage">
             </a>
             <div>
-                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
+                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button>
                 <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button>
             </div>
         </div>
@@ -324,8 +324,8 @@
 </footer>
 
 <script src="/js/validate-tutor.js"></script>
-<script type="module" src="/js/mypage-tutor.js" nomodule></script>
-<script type="module" src="/js/myPageMove.js" nomodule></script>
+<script type="module" src="/js/mypage-tutor.js" ></script>
+<script type="module" src="/js/move.js" ></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
