--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
@@ -53,7 +53,7 @@
             </a>
             <div>
                 <a href="#">
-                    <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
+                    <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button>
                 </a>
                 <a href="#">
                     <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign">SIGN IN</button>
@@ -505,7 +505,7 @@
 </footer>
 
 <script type="module" src="/js/schedule.js"></script>
-<script type="module" src="/js/myPageMove.js" nomodule></script>
+<script type="module" src="/js/move.js" ></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
