--- a/src/main/resources/templates/html/dashboard/myPage-admin.html
+++ b/src/main/resources/templates/html/dashboard/myPage-admin.html
@@ -50,7 +50,7 @@
 
             </a>
             <div>
-                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
+                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button>
                 <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN IN</button>
             </div>
         </div>
@@ -232,6 +232,7 @@
 
 <!--<script type="text/javascript" th:inline="javascript" src="/js/mypage-admin.js"></script>-->
 <script type="module" src="/js/mypage-admin.js"></script>
+<script type="module" src="/js/move.js"></script>
 </body>
 
 </html>
