--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
@@ -48,7 +48,7 @@
 
             </a>
             <div>
-                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button></a>
+                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn" hidden>MY PAGE</button></a>
                 <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button></a>
             </div>
         </div>
@@ -256,8 +256,8 @@
 <script src="/js/spaces.js"></script>
 
 <!-- Ajax get data -->
-<script type="module" src="/js/move.js" nomodule></script>
-<script type="module" src="/js/myPage-tutees_Schedule.js" nomodule></script>
+<script type="module" src="/js/move.js" ></script>
+<script type="module" src="/js/myPage-tutees_Schedule.js" ></script>
 
 
 </body>
