클래스 입장시 허용된 멤버가 아니면 main페이지로 추방하는 기능 개발

--- a/topicsation_class/src/public/views/classroom.mustache
+++ b/topicsation_class/src/public/views/classroom.mustache
@@ -27,6 +27,9 @@
     <script src="/js/timer.js"></script>
     <script src="/js/zoom.js"></script>
     <script src="/js/chat.js"></script>
+
+    <script>window.token = '{{ $token }}';</script>
+    <script type="module" src="/js/check.js"></script>
     <style>
       html,
       body {
