5/2 비밀번호 재설정 링크 이메일 전송 후 비밀번호 수정 기능 구현

--- a/src/main/resources/templates/html/password-change.html
+++ b/src/main/resources/templates/html/password-change.html
@@ -83,7 +83,7 @@
                           </span>
                         </span>
                       </div>
-                      <input class="form-control" id="password_confirm" placeholder="Confirm password" type="password"
+                      <input class="form-control" id="password-confirm" placeholder="Confirm password" type="password"
                         aria-label="Password" required />
                     </div>
                   </div>
