--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -60,12 +60,15 @@
                   <label for="email">Your email<span class="txt-error email"
                     style="padding-left:10px; font-size:13px;"></span>
                   </label>
-                  <div class="input-group mb-4">
+                  <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><span class="fas fa-envelope"></span></span>
                     </div>
                     <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email adress" autocomplete="off"
-                      required />
+                    required />
+                  </div>
+                  <div>
+                  <span id="emailCheck" class="small mb-3" style="float:left;color: #ff253a; font-weight: bold"></span>
                   </div>
                 </div>
                 <!-- End of Form -->
