튜터 회원가입 FormData형식으로 수정, PDF 인증파일 스토리지 업로드 기능 추가

--- a/src/main/resources/templates/html/sign-up-tutor.html
+++ b/src/main/resources/templates/html/sign-up-tutor.html
@@ -176,7 +176,7 @@
                   <div class="form-group">
                     <label>Files Required for Authentication</label>
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="customFile" accept=".pdf" required />
+                      <input type="file" class="custom-file-input" id="customFile" accept=".pdf" name="customFile" required />
                       <label class="custom-file-label" id="show-files" for="customFile">Choose file</label>
                     </div>
                   </div>
@@ -209,6 +209,7 @@
 
   <!-- Validation -->
   <script src="/js/validate-tutor.js"></script>
+  <script src="/js/signup-tutor.js"></script>
 
   <!-- Core -->
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
@@ -255,7 +256,7 @@
   <!-- Spaces custom Javascript -->
   <script src="/js/spaces.js"></script>
 
-  <script src="/js/signup-tutor.js"></script>
+
 </body>
 
 </html>
