--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -67,7 +67,7 @@
                         <div class="card-body p-2">
                             <div class="profile-thumbnail small-thumbnail mx-auto">
                                 <input type="file" id="file" name="file"
-                                       style="display: none" accept=".jpg"/>
+                                       style="display: none" accept="image/png, image/jpeg, image/jpg"/>
                                 <button type="button" id="profileImgButton" class="btn btn-sm p-0"
                                         data-toggle="tooltip" data-placement="top" title="Edit Profile">
                                     <img src="/assets/img/team/profile-picture-4.jpg"
