myPage-interest : 버그픽스

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -119,22 +119,22 @@
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
                                                 <select class="custom-select" id="first-interest" required>
-                                                    <option value="politics">정치</option>
-                                                    <option value="economics">경제</option>
-                                                    <option value="IT">IT</option>
-                                                    <option value="fitness">건강</option>
-                                                    <option value="food">요리</option>
+                                                    <option value="business">사업</option>
+                                                    <option value="tech">기술</option>
+                                                    <option value="science">과학</option>
+                                                    <option value="entertainment">오락</option>
+                                                    <option value="health">건강</option>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
                                                 <select class="custom-select" id="second-interest" required>
-                                                    <option value="politics">정치</option>
-                                                    <option value="economics">경제</option>
-                                                    <option value="IT">IT</option>
-                                                    <option value="fitness">건강</option>
-                                                    <option value="food">요리</option>
+                                                    <option value="business">사업</option>
+                                                    <option value="tech">기술</option>
+                                                    <option value="science">과학</option>
+                                                    <option value="entertainment">오락</option>
+                                                    <option value="health">건강</option>
                                                 </select>
                                             </div>
                                         </div>
