--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -122,22 +122,22 @@
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
                                                 <select class="custom-select" id="first-interest" required>
-                                                    <option value="politics">Politics</option>
-                                                    <option value="economics">Economics</option>
-                                                    <option value="IT">IT</option>
-                                                    <option value="fitness">Fitness</option>
-                                                    <option value="food">Food</option>
+                                                    <option value="business">Business</option>
+                                                    <option value="tech">Tech</option>
+                                                    <option value="science">Science</option>
+                                                    <option value="entertainment">Entertainment</option>
+                                                    <option value="health">Health</option>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
                                                 <select class="custom-select" id="second-interest" required>
-                                                    <option value="politics">Politics</option>
-                                                    <option value="economics">Economics</option>
-                                                    <option value="IT">IT</option>
-                                                    <option value="fitness">Fitness</option>
-                                                    <option value="food">Food</option>
+                                                    <option value="business">Business</option>
+                                                    <option value="tech">Tech</option>
+                                                    <option value="science">Science</option>
+                                                    <option value="entertainment">Entertainment</option>
+                                                    <option value="health">Health</option>
                                                 </select>
                                             </div>
                                         </div>
