--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -119,10 +119,9 @@
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
                                                 <select class="custom-select" id="first-interest" required>
-                                                    <option value="business">사업</option>
-                                                    <option value="tech">기술</option>
+                                                    <option value="business">비즈니스</option>
                                                     <option value="science">과학</option>
-                                                    <option value="entertainment">오락</option>
+                                                    <option value="entertainment">엔터테인먼트</option>
                                                     <option value="health">건강</option>
                                                 </select>
                                             </div>
@@ -130,10 +129,9 @@
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
                                                 <select class="custom-select" id="second-interest" required>
-                                                    <option value="business">사업</option>
-                                                    <option value="tech">기술</option>
+                                                    <option value="business">비즈니스</option>
                                                     <option value="science">과학</option>
-                                                    <option value="entertainment">오락</option>
+                                                    <option value="entertainment">엔터테인먼트</option>
                                                     <option value="health">건강</option>
                                                 </select>
                                             </div>
