관심사 용어 수정, 메인페이지 이동 추가

--- a/src/main/resources/templates/html/sign-up-success.html
+++ b/src/main/resources/templates/html/sign-up-success.html
@@ -50,8 +50,8 @@
               style="text-align: center;">
               <h3>TOPICSATION</h3>
               <h4 class="mb-4">회원가입을 축하합니다!</h4>
-              <button type="submit" class="btn btn-block btn-primary" id="mainpage-btn">
-                메인 페이지로 이동
+              <button type="submit" class="btn btn-block btn-primary" onclick="location.href = '/main'" id="mainpage-btn">
+                Go to the Main Page
               </button>
             </div>
           </div>
