--- a/src/main/resources/templates/html/sign-up-tutor.html
+++ b/src/main/resources/templates/html/sign-up-tutor.html
@@ -154,11 +154,11 @@
                       <option value="" disabled selected style="display: none">
                         First Interest
                       </option>
-                      <option value="politics">Politics</option>
-                      <option value="economics">Economics</option>
-                      <option value="IT">IT</option>
-                      <option value="fitness">Fitness</option>
-                      <option value="food">Food</option>
+                      <option value="Business">Business</option>
+                      <option value="Tech">Tech</option>
+                      <option value="Science">Science</option>
+                      <option value="Entertainment">Entertainment</option>
+                      <option value="Health">Health</option>
                     </select>
                   </div>
                   <div class="form-group">
@@ -166,11 +166,11 @@
                       <option value="" disabled selected style="display: none">
                         Second Interest
                       </option>
-                      <option value="politics">Politics</option>
-                      <option value="economics">Economics</option>
-                      <option value="IT">IT</option>
-                      <option value="fitness">Fitness</option>
-                      <option value="food">Food</option>
+                      <option value="Business">Business</option>
+                      <option value="Tech">Tech</option>
+                      <option value="Science">Science</option>
+                      <option value="Entertainment">Entertainment</option>
+                      <option value="Health">Health</option>
                     </select>
                   </div>
                   <div class="form-group">
