myPage-histoy : 이름 수정

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_CourseHistory.html
@@ -96,7 +96,7 @@
                                             <th scope="col">#</th>
                                             <th scope="col">수업일자</th>
                                             <th scope="col">튜터</th>
-                                            <th scope="col">메모</th>
+                                            <th scope="col">뉴스 URL</th>
                                         </tr>
                                         </thead>
                                         <tbody id="tutee-history">
