myPage-interest : 태크 추가

--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -124,6 +124,7 @@
                                                 <select class="custom-select" id="first-interest" required>
                                                     <option value="business">Business</option>
                                                     <option value="science">Science</option>
+                                                    <option value="tech">Tech</option>
                                                     <option value="entertainment">Entertainment</option>
                                                     <option value="health">Health</option>
                                                 </select>
@@ -134,6 +135,7 @@
                                                 <select class="custom-select" id="second-interest" required>
                                                     <option value="business">Business</option>
                                                     <option value="science">Science</option>
+                                                    <option value="tech">Tech</option>
                                                     <option value="entertainment">Entertainment</option>
                                                     <option value="health">Health</option>
                                                 </select>
