--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -121,6 +121,7 @@
                                                 <select class="custom-select" id="first-interest" required>
                                                     <option value="business">비즈니스</option>
                                                     <option value="science">과학</option>
+                                                    <option value="tech">태크</option>
                                                     <option value="entertainment">엔터테인먼트</option>
                                                     <option value="health">건강</option>
                                                 </select>
@@ -131,6 +132,7 @@
                                                 <select class="custom-select" id="second-interest" required>
                                                     <option value="business">비즈니스</option>
                                                     <option value="science">과학</option>
+                                                    <option value="tech">과학</option>
                                                     <option value="entertainment">엔터테인먼트</option>
                                                     <option value="health">건강</option>
                                                 </select>
