--- a/src/main/resources/templates/html/sign-up-tutee.html
+++ b/src/main/resources/templates/html/sign-up-tutee.html
@@ -108,21 +108,21 @@
                     <label>관심사</label>
                     <select class="custom-select" id="first-interest" name="firstInterest" required>
                       <option value="" disabled selected style="display:none">첫번째 관심사</option>
-                      <option value="Business">비즈니스</option>
-                      <option value="Tech">테크</option>
-                      <option value="Science">과학</option>
-                      <option value="Entertainment">엔터테인먼트</option>
-                      <option value="Health">건강</option>
+                      <option value="business">비즈니스</option>
+                      <option value="tech">테크</option>
+                      <option value="science">과학</option>
+                      <option value="entertainment">엔터테인먼트</option>
+                      <option value="health">건강</option>
                     </select>
                   </div>
                   <div class="form-group">
                     <select class="custom-select" id="second-interest" name="secondInterest" required>
                       <option value="" disabled selected style="display:none">두번째 관심사</option>
-                      <option value="Business">비즈니스</option>
-                      <option value="Tech">테크</option>
-                      <option value="Science">과학</option>
-                      <option value="Entertainment">엔터테인먼트</option>
-                      <option value="Health">건강</option>
+                      <option value="business">비즈니스</option>
+                      <option value="tech">테크</option>
+                      <option value="science">과학</option>
+                      <option value="entertainment">엔터테인먼트</option>
+                      <option value="health">건강</option>
                     </select>
                   </div>
                   <!-- End of Form -->
