--- a/src/main/resources/templates/html/sign-up-tutor.html
+++ b/src/main/resources/templates/html/sign-up-tutor.html
@@ -166,11 +166,11 @@
                       <option value="" disabled selected style="display: none">
                         Second Interest
                       </option>
-                      <option value="Business">Business</option>
-                      <option value="Tech">Tech</option>
-                      <option value="Science">Science</option>
-                      <option value="Entertainment">Entertainment</option>
-                      <option value="Health">Health</option>
+                      <option value="business">Business</option>
+                      <option value="tech">Tech</option>
+                      <option value="science">Science</option>
+                      <option value="entertainment">Entertainment</option>
+                      <option value="health">Health</option>
                     </select>
                   </div>
                   <div class="form-group">
