수업나가기 버튼 클릭시 메인으로 나가게 수정

--- a/topicsation_class/src/public/views/classroom.mustache
+++ b/topicsation_class/src/public/views/classroom.mustache
@@ -83,7 +83,7 @@
               <span id="minutes"></span>
               <span id="seconds"></span>
             </div>
-            <a href="/mypage"
+            <a href="http://localhost:8081/main"
               ><button
                 type="button"
                 id="classroom-out"
