--- a/src/main/resources/templates/html/sign-up-tutor.html
+++ b/src/main/resources/templates/html/sign-up-tutor.html
@@ -162,7 +162,7 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <select class="custom-select" id="second-interest" name="secondInterest" equired>
+                    <select class="custom-select" id="second-interest" name="secondInterest" required>
                       <option value="" disabled selected style="display: none">
                         Second Interest
                       </option>
