5월 4일 debugging 1. 캘린더 오늘부터 선택되게 type="module" 제거

--- a/src/main/resources/templates/html/Tutor-Detail-View.html
+++ b/src/main/resources/templates/html/Tutor-Detail-View.html
@@ -576,7 +576,7 @@
     </div>
 </footer>
 
-<script type="module" src="/js/tutor-detail-view-calendar.js" charset="UTF-8"></script>
+<script src="/js/tutor-detail-view-calendar.js" charset="UTF-8"></script>
 <script type="module" src="/js/move.js" charset="UTF-8"></script>
 
 <!-- Core -->
