--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Schedule.html
@@ -507,7 +507,7 @@
     </div>
 </footer>
 
-<script type="module" src="/js/schedule.js"></script>
+<script src="/js/schedule.js"></script>
 <script type="module" src="/js/move.js" ></script>
 
 <!-- Core -->
