회원가입 관심사 선택 오류 수정

--- a/src/main/resources/templates/html/sign-up-tutee.html
+++ b/src/main/resources/templates/html/sign-up-tutee.html
@@ -152,7 +152,7 @@
   </main>
 
   <!-- Validation -->
-  <script src="/js/validate-tutee.js"></script>
+<!--  <script src="/js/validate-tutee.js"></script>-->
 
   <!-- Core -->
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
