--- a/src/main/resources/templates/html/sign-up-tutor.html
+++ b/src/main/resources/templates/html/sign-up-tutor.html
@@ -208,7 +208,7 @@
   </main>
 
   <!-- Validation -->
-  <script src="/js/validate-tutor.js"></script>
+<!--  <script src="/js/validate-tutor.js"></script>-->
   <script src="/js/signup-tutor.js"></script>
 
   <!-- Core -->
