--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -218,7 +218,7 @@
                                                         </form>
                                                     </div>
                                                     <div class="modal-footer">
-                                                        <button type="button" class="btn btn-sm btn-secondary" id="authenticate">
+                                                        <button type="submit" class="btn btn-sm btn-secondary" id="authenticate">
                                                             Authenticate
                                                         </button>
                                                         <button type="button"
