튜티 스케쥴 수업 시간 전 입장 불가 설정, 당일 날짜만 수업 입장 버튼으로 변경, 이후 날짜는 예약취소로 설정

--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Schedule.html
@@ -93,7 +93,7 @@
                                 <form>
                                     <table class="table">
                                         <thead>
-                                        <tr>
+                                        <tr style="text-align: center">
                                             <th scope="col">#</th>
                                             <th scope="col">예약시간</th>
                                             <th scope="col">튜터</th>
