5/5 로그인 관련 기능 리팩토링

--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -68,7 +68,7 @@
                     required />
                   </div>
                   <div>
-                  <span id="emailCheck" class="small mb-3" style="float:left;color: #ff253a; font-weight: bold"></span>
+                  <span id="emailCheck" class="small mb-3" style="float:left; font-weight: bold"></span>
                   </div>
                 </div>
                 <!-- End of Form -->
